--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/trusted-types": "^2.0.7",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "postcss": "^8.5.6",
     "tailwindcss": "^3.4.0",
     "typescript": "^5"
   }
